one box complete

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         </h4>
       </section>
       <!-- Music 45 million songs. Zero ads. ended -->
-
+       
+      <!-- The movie and TV collection started -->
       <section class="white-box">
         <div>
           <img
@@ -87,6 +88,7 @@
         <div><button>Read More</button></div>
         <div><img src="images/mac.png" alt="mag-image" /></div>
       </section>
+      <!-- The movie and TV collection ended -->
     </main>
     <!-- main container ended -->
     <script
