thired section completed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </h4>
       </section>
       <!-- Music 45 million songs. Zero ads. ended -->
-       
+
       <!-- The movie and TV collection started -->
       <section class="white-box">
         <div>
@@ -86,9 +86,25 @@
           you're going somewhere you won't have Wi-Fi.
         </p>
         <div><button>Read More</button></div>
-        <div><img src="images/mac.png" alt="mag-image" /></div>
+        <div>
+          <img
+            src="https://mytunes-322.web.app/images/mac.png"
+            alt="mac-image"
+          />
+        </div>
       </section>
       <!-- The movie and TV collection ended -->
+
+      <section class="third-last-container">
+        <h3>A world of entertainment. Available wherever you are.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eius
+          reiciendis aspernatur labore, quas veniam nemo rem modi rerum <br />
+          quo quidem quos hic aut exercitationem dicta sequi? Nostrum natus
+          quisquam <br />
+          id nesciunt mollitia quasi dolorem amet ut dolore, eius ipsam?
+        </p>
+      </section>
     </main>
     <!-- main container ended -->
     <script
