card container completed

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       </section>
       <!-- The movie and TV collection ended -->
 
+      <!-- third-last-container started -->
       <section class="third-last-container">
         <h3>A world of entertainment. Available wherever you are.</h3>
         <p>
@@ -105,6 +106,28 @@
           id nesciunt mollitia quasi dolorem amet ut dolore, eius ipsam?
         </p>
       </section>
+      <!-- third-last-container ended -->
+
+      <!-- card-container started -->
+      <section class="card-container">
+        <div class="image-card">
+          <img src="https://mytunes-322.web.app/images/gift_card.png" alt="gift-card" />
+        </div>
+        <div class="text">
+          <h2>Gift Cards</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+            commodi inventore pariatur dolores amet, quod enim dolore incidunt.
+            Porro incidunt nesciunt ad necessitatibus est perferendis deleniti
+            non similique blanditiis, adipisci veniam repellat qui voluptates
+            quae consectetur illo temporibus. Impedit, perspiciatis!
+          </p>
+          <br /><br />
+          <h6>Already have an Orange myTune Music Gift Cards</h6>
+          <div><button class="card-btn">Redeem</button></div>
+        </div>
+      </section>
+      <!-- card-container ended -->
     </main>
     <!-- main container ended -->
     <script
