--- a/index.html
+++ b/index.html
@@ -130,6 +130,62 @@
       <!-- card-container ended -->
     </main>
     <!-- main container ended -->
+
+    <!-- footer started -->
+     <section class="footer">
+            <div class="footer-links">
+              <h4>Shop &amp; Learn</h4>
+              <hr>
+              <ul>
+                <li>Music</li>
+                <li>Movies</li>
+                <li>Shows</li>
+                <li>Apps</li>
+                <li>Gift Cards</li>
+              </ul>
+            </div>
+            <div class="footer-links">
+              <h4>Orange Store</h4>
+              <hr>
+              <ul>
+                <li>Find a Store</li>
+                <li>Today at Orange</li>
+                <li>Financing</li>
+                <li>Orange Camp</li>
+                <li>Order Status</li>
+              </ul>
+            </div>
+            <div class="footer-links">
+              <h4>Education & Business</h4>
+              <hr>
+              <ul>
+                <li>Orange & Education</li>
+                <li>Shop for Collage</li>
+                <li>Orange & Business</li>
+                <li>Shop for Business</li>
+                <li>Jobs</li>
+              </ul>
+            </div>
+            <div class="footer-links">
+              <h4>About Orange</h4>
+              <hr>
+              <ul>
+                <li>Newsroom</li>
+                <li>Orange Leadership</li>
+                <li>Investors</li>
+                <li>Envents</li>
+                <li>Contact Orange</li>
+              </ul>
+            </div>
+          </section>
+
+          <!-- sub-footer started -->
+
+          <section class="sub-footer">
+            <p>Copyright &copy; 2022 ABD</p>
+          </section>
+          <!-- sub-footer ended -->
+    <!-- footer ended -->
     <script
       src="https://kit.fontawesome.com/9c5040dcb4.js"
       crossorigin="anonymous"
